plain user functionality DAO + some parser/factory fixes